xRayテンプレト・スタイル調整

--- a/assets/templates/xray/style.css
+++ b/assets/templates/xray/style.css
@@ -1,5 +1,5 @@
 /* init **************/
-html                        {font-family:Arial,Helvetica,sans-serif;font-size:100.01%;overflow-y:scroll;}
+html                        {font-family:Arial,"Helvetica Neue",Helvetica,Meiryo,"Hiragino Kaku Gothic Pro","MS PGothic",sans-serif;font-size:100.01%;overflow-y:scroll;}
 body                        {font-size:small;}
 input, select, textarea     {font:inherit;}
 body                        {text-align:center;}
@@ -79,7 +79,7 @@ body                        {
 .navi ul li a:visited,
 .subnavi a:link,
 .subnavi a:visited
-                            {text-decoration: none;}
+                            {text-decoration: none;line-height:1.3}
 .navi ul li ul              {display: none;}
 .navi ul li:hover ul a      {
                              filter: alpha(opacity=92);
