--- a/manager/media/style/RevoStyle/style.css
+++ b/manager/media/style/RevoStyle/style.css
@@ -1062,13 +1062,13 @@ zoom:1;
 	font-weight: bold;
 	padding: 6px 4px;
 	margin-bottom: 3px;
-	background-color: #818181;
+	background-color: #86939E;
 	background-repeat:repeat-x;
 	text-shadow: 0px -1px 0px #222;
-			background:-moz-linear-gradient(#818181, #606060);
-			background:-webkit-gradient(linear, 0 0, 0 100%, from(#818181), to(#606060));
-			background:-o-linear-gradient(#818181, #606060);
-			filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#818181,endColorstr=#606060); zoom:1;
+			background:-moz-linear-gradient(#8aae4b, #66901b);
+			background:-webkit-gradient(linear, 0 0, 0 100%, from(#8aae4b), to(#66901b));
+			background:-o-linear-gradient(#8aae4b, #66901b);
+			filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#8aae4b,endColorstr=#66901b); zoom:1;
 }
 #mx_contextmenu .seperator {
 	font-size: 0;
