--- a/install/style.css
+++ b/install/style.css
@@ -18,7 +18,7 @@ vertical-align:baseline;
 
 body {
 -x-system-font:none;
-font-family:Helvetica,Arial,'Liberation Sans',FreeSans,sans-serif;
+font-family: Arial,"Helvetica Neue",Helvetica,Meiryo,"Hiragino Kaku Gothic Pro","MS PGothic",sans-serif;
 font-size:78.5%;
 font-size-adjust:none;
 font-stretch:normal;
