--- a/manager/media/style/RevoStyle/style.css
+++ b/manager/media/style/RevoStyle/style.css
@@ -1064,6 +1064,7 @@ zoom:1;
 	margin-bottom: 3px;
 	background-color: #86939E;
 	background-repeat:repeat-x;
+	background: none repeat scroll 0 0 #66901b;
 	text-shadow: 0px -1px 0px #222;
 			background:-moz-linear-gradient(#8aae4b, #66901b);
 			background:-webkit-gradient(linear, 0 0, 0 100%, from(#8aae4b), to(#66901b));
