--- a/assets/plugins/tinymce/style/content.css
+++ b/assets/plugins/tinymce/style/content.css
@@ -2,23 +2,25 @@
 
 /* body.mceContentBody {margin:8px;text-align:left;} */
 
-body,
-td,
-th,
-pre {
-/*	font-family: 'メイリオ',Meiryo,'ヒラギノ角ゴ Pro W3','Hiragino Kaku Gothic Pro','ＭＳ Ｐゴシック',sans-serif;*/
-	font-size  : 12px;
-	font-style : normal;
-}
 html {
 	box-shadow: inset 0px 4px 3px 0px rgba(70, 70, 70, 0.1);
 }
 
 body {
+	font-size  : 92.5%;
+	font-family : Arial,"Helvetica Neue",Helvetica,Meiryo,"Hiragino Kaku Gothic Pro","MS PGothic",sans-serif;
 	line-height     : 1.5;
 	color           : #333333;
 	text-align      : left;
 	margin:8px;
+}
+
+table,
+tr,
+td,
+th,
+pre {
+	font : inherit;
 }
 
 pre {
