--- a/manager/media/style/RevoStyle/style.css
+++ b/manager/media/style/RevoStyle/style.css
@@ -796,8 +796,9 @@ a.hometblink:hover {
 	background-color: #fff;
 	width: 300px;
 	height: 150px;
+    margin-top:30px;
 	padding: 50px;
-	border: 1px solid #039;
+	border: 1px solid #999;
 }
 /* -------------------------[ contextmenu in editing modules ]--- */
 .contextMenu {
