New - 下書き機能

--- a/manager/media/style/RevoStyle/style.css
+++ b/manager/media/style/RevoStyle/style.css
@@ -88,6 +88,9 @@ h1 {
 	border-radius: 3px;
 	margin: 8px 15px 10px;
 }
+h1.draft {
+    background-color: #F4E2C3;
+}
 	.rtl h1 {
 		margin-right: 10px;
 	}
@@ -1411,9 +1414,8 @@ ul.actionButtons {
 	vertical-align:top;
 	white-space:nowrap;
 	box-shadow:0 0 1px rgba(0,0,0,0.4),0 1px 1px rgba(0,0,0,0.3);
-	background:#fafafa;
-	background:-moz-linear-gradient(#FAFAFA,#D2D2D2);
-	background:-webkit-gradient(linear,0 0,0 100%,from(#FAFAFA),to(#D2D2D2));
+	background-color:#fafafa;
+	background:linear-gradient(#FAFAFA,#D2D2D2);
 	background:-o-linear-gradient(#FAFAFA,#D2D2D2);
 	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#FAFAFA,endColorstr=#D2D2D2);
 	zoom:1;
@@ -1446,6 +1448,12 @@ ul.actionButtons {
 	padding:2px 4px;
 	color:#777;
 	border-width:0;
+}
+
+.actionButtons .opendraft a {
+	background-color:#faf1d4;
+	background:linear-gradient(#faf1d4,#e9e0c3);
+	background:-o-linear-gradient(#faf1d4,#e9e0c3);
 }
 
 .actionButtons select,.actionButtons span.and {
