フォント修正
半角英数もMeiryoで

--- a/manager/media/style/RevoStyle/style.css
+++ b/manager/media/style/RevoStyle/style.css
@@ -8,7 +8,7 @@ html {
 	font-size: 100.01%;
 }
 body {
-	font-family: Arial,"Helvetica Neue",Helvetica,Meiryo,"Hiragino Kaku Gothic Pro","MS PGothic",sans-serif;
+	font-family: Meiryo,"Hiragino Kaku Gothic Pro",Arial,"Helvetica Neue",Helvetica,sans-serif;
 	font-size: 75%;
 	height: 100%;
 	line-height: 1.5;
