--- a/manager/media/style/RevoStyle/style.css
+++ b/manager/media/style/RevoStyle/style.css
@@ -307,14 +307,10 @@ form textarea
 	min-height: 17px;
 	vertical-align: baseline;
 	border-radius:3px;
-			-moz-box-shadow: 0px 1px 3px #E8E8E8 inset;
-			-webkit-box-shadow: 0px 1px 3px #E8E8E8 inset;
-			box-shadow: 0px 1px 3px #E8E8E8 inset;
+	box-shadow: 0px 1px 3px #E8E8E8 inset;
 }
 form textarea.webui-ignore
 {
-	-moz-box-shadow: none;
-	-webkit-box-shadow: none;
 	box-shadow:none;
 }
 	.rtl form input[type=text],
@@ -488,10 +484,8 @@ ime-mode:disabled;
 	padding: 5px 15px;
 	background: #fff;
 	border: 1px solid #ccc;
-		-moz-box-shadow:1px 1px 3px #ccc;
-		-webkit-box-shadow:1px 1px 3px #ccc;
-		box-shadow:1px 1px 3px #ccc;
-		border-radius:3px;
+	box-shadow:1px 1px 3px #ccc;
+	border-radius:3px;
 }
 .sectionBody h3 {
 	font-size: 1.1em;
@@ -549,8 +543,6 @@ ime-mode:disabled;
 	background:-o-linear-gradient(#f5f5f5, #DDDDDD);
 	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#f5f5f5,endColorstr=#DDDDDD); zoom:1;
 	background:linear-gradient(#f5f5f5, #DDDDDD);
-	-moz-box-shadow:0px 1px 0px #fff inset;
-	-webkit-box-shadow:0px 1px 0px #fff inset;
 	box-shadow:0px 1px 0px #fff inset;
 	border-radius:5px 5px 0 0;
 }
@@ -634,7 +626,6 @@ a img {
 
 div.treeframebody {
 	background: #f5f5f5 url(images/misc/subnav.png) !important;
-	-webkit-box-shadow: inset -2px 2px 6px 0px rgba(0, 0, 0, 0.1);
 	box-shadow: inset -2px 2px 6px 0px rgba(0, 0, 0, 0.1);
 }
 
@@ -942,9 +933,7 @@ a.hometblink:hover {
 #nav li.active {
 	background: none repeat scroll 0 0 #616161;
 	border-radius:5px 5px 0 0;
-			-moz-box-shadow: 0 1px 0 #CCC inset, 1px 1px 2px rgba(0,0,0,.9);
-			-webkit-box-shadow: 0 1px 0 #CCC inset, 1px 1px 2px rgba(0,0,0,.9);
-			box-shadow: 0 1px 0 #999 inset, 1px 1px 2px rgba(0,0,0,.9);
+	box-shadow: 0 1px 0 #999 inset, 1px 1px 2px rgba(0,0,0,.9);
 }
 #nav li.active a {
 	border-bottom:1px solid #616161;
@@ -1017,8 +1006,6 @@ zoom:1;
 	overflow: hidden;
 	line-height: 11px;
 	box-shadow: 2px 2px 15px #eaeaea;
-	-moz-box-shadow: 2px 2px 15px #eaeaea;
-	-webkit-box-shadow: 2px 2px 20px #eaeaea;
 }
 #mx_contextmenu .menuLink {
 	cursor: pointer;
@@ -1136,7 +1123,7 @@ zoom:1;
 	background: none repeat scroll 0 0 #66901b;
 	text-shadow: 0px -1px 0px #2B5F0C;
 	border-radius:5px 5px 0 0;
-		-ms-border-radius:0;
+	border-radius:0;
 			background:-moz-linear-gradient(#8aae4b, #66901b);
 			background:-webkit-gradient(linear, 0 0, 0 100%, from(#8aae4b), to(#66901b));
 			background:-o-linear-gradient(#8aae4b, #66901b);
@@ -1398,13 +1385,11 @@ ul.actionButtons {
 	vertical-align:top;
 	margin-top:1px;
 	filter:alpha(opacity=70);
-	-moz-opacity:.7;
 	opacity:.7;
 }
 
 .actionButtons a:hover img {
 	filter:alpha(opacity=100);
-	-moz-opacity:1;
 	opacity:1;
 }
 
@@ -1812,7 +1797,6 @@ input:focus.DatePicker, #mutate input:focus.DatePicker, #userPane input:focus.Da
 .phptextarea {
 font-family: Consolas,'Courier New','Courier', monospace;
 -webkit-box-sizing: border-box; /* Chrome, Safari */
--moz-box-sizing: border-box;    /* Firefox */
 box-sizing: border-box;         /* IE8+, Opera */
 }
 
