--- a/manager/media/style/RevoStyle/style.css
+++ b/manager/media/style/RevoStyle/style.css
@@ -745,6 +745,8 @@ a.hometblink:hover {
 }
 .preLoaderText {
 	background-color: #fff;
+	border-radius:10px;
+	opacity: .7;
 	width: 300px;
 	height: 150px;
     margin-top:30px;
