--- a/install/style.css
+++ b/install/style.css
@@ -1,15 +1,13 @@
 html {
 background-image:url(img/bg.png);
 }
-html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, pre, a, abbr, address, big, code, del, dfn, em, font, img, small, strong, sub, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td,
-html body * span.clear,
+html, body,
 html body * div.clear,
 html body * li.clear,
 html body * dd.clear {
 border:0 none;
 font-size:100.01%;
 margin:0;
-outline-color:-moz-use-text-color;
 outline-style:none;
 outline-width:0;
 padding:0;
@@ -18,7 +16,7 @@ vertical-align:baseline;
 
 body {
 -x-system-font:none;
-font-family: Arial,"Helvetica Neue",Helvetica,Meiryo,"Hiragino Kaku Gothic Pro","MS PGothic",sans-serif;
+font-family: Meiryo,"Hiragino Kaku Gothic Pro",Arial,"Helvetica Neue",Helvetica,sans-serif;
 font-size:78.5%;
 font-size-adjust:none;
 font-stretch:normal;
