--- a/manager/media/style/RevoStyle/style.css
+++ b/manager/media/style/RevoStyle/style.css
@@ -742,6 +742,7 @@ a.hometblink:hover {
 	height: 100%;
 	text-align: center;
 	vertical-align: middle;
+	background-color:rgba(255,255,255,.3);
 }
 .preLoaderText {
 	background-color: #fff;
@@ -749,7 +750,7 @@ a.hometblink:hover {
 	opacity: .7;
 	width: 300px;
 	height: 150px;
-    margin-top:30px;
+    margin:70px auto;
 	padding: 50px;
 	border: 1px solid #999;
 }
