Refactor mutate_templates.dynamic.php

--- a/manager/media/style/RevoStyle/style.css
+++ b/manager/media/style/RevoStyle/style.css
@@ -243,6 +243,7 @@ input[type='text'][readonly]:focus,
 .readonly {
 	background-color:#eee !important;
 	text-shadow:1px 1px #fff !important;
+	cursor:not-allowed;
 }
 optgroup {
 	font-style:normal;
