--- a/assets/plugins/managermanager/widgets/ddmaxlength/ddmaxlength.css
+++ b/assets/plugins/managermanager/widgets/ddmaxlength/ddmaxlength.css
@@ -1,13 +1,17 @@
 .ddMaxLengthCount {
-	font-size: 18px;
-	color: #999999;
+    font-size: 18px;
+    color: #999999;
 }
 
-.maxLenghtWarning {color: #5C0002;}
+.maxLenghtWarning {
+    color: #5C0002;
+}
 
-.maxLenghtError {color: #D40D12;}
+.maxLenghtError {
+    color: #D40D12;
+}
 
 .maxLenghtErrorField {
-	background-image: none !important;
-	background-color: #ff9999 !important;
+    background-image: none !important;
+    background-color: #ff9999 !important;
 }
